# Neap

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  build.rs  build.sh  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: index.html
docs/plans/: 2026-04-06-daemon-memfs-plan.md
docs/specs/: 2026-04-06-daemon-memfs-design.md
docs/superpowers/plans/: 2026-04-06-neap-implementation.md
docs/superpowers/specs/: 2026-04-06-neap-design.md
scripts/: nexec  pre-commit
src/: config.rs  daemon.rs  error.rs  exec.rs  forwarding.rs  info.rs  lib.rs  main.rs  memfs.rs  memsftp.rs  server.rs  session.rs  sftp.rs  transport.rs
src/pty/: mod.rs  unix.rs  windows.rs
tests/: integration.rs
