[package]
name = "neap"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0"
description = "Statically-linked SSH server for penetration testing"
authors = ["Real-Fruit-Snacks"]
repository = "https://github.com/Real-Fruit-Snacks/Neap"
homepage = "https://github.com/Real-Fruit-Snacks/Neap"
readme = "README.md"
keywords = ["ssh", "penetration-testing", "reverse-shell", "security"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.75"

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "process", "sync", "time", "fs"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
rcgen = "0.13"
log = "0.4"
env_logger = "0.11"
subtle = "2.6"
async-trait = "0.1"
clap = { version = "4", features = ["derive"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["term", "process", "signal"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Pipes", "Win32_System_IO"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
